# kayrx

./: Cargo.toml  README.md
docs/: community.html  funding.html  index.html
docs/blog/2020/: kayrxtishere.html
docs/doc/: index.html
docs/doc/advance/: error.html  middleware.html  request.html  response.html  static-file.html  test.html  url-dispatch.html
docs/doc/basic/: app.html  extractor.html  handler.html  server.html  start.html
docs/doc/database/: diesel.html
docs/doc/deep/: server.html
docs/doc/intro/: install.html  whatis.html
docs/doc/pattern/: autoreload.html
docs/doc/protocol/: http2.html  websocket.html
jrpc-macro/: Cargo.toml
kayrx-macro/: Cargo.toml  README.md
kayrx-macro/src/: lib.rs  route.rs
kayrx-test/: Cargo.toml  README.md
kayrx-test/src/: http.rs  lib.rs
src/: lib.rs
src/codec/: decoder.rs  framed.rs  framed2.rs  framed_read.rs  framed_write.rs  length_delimited.rs  lines_codec.rs  mod.rs
src/connect/: connector.rs  mod.rs  resolve.rs  service.rs  uri.rs
src/connect/ssl/: mod.rs  rustls.rs
src/fiber/: arbiter.rs  block_pool.rs  builder.rs  context.rs  enter.rs  handle.rs  io.rs  local.rs  mod.rs  runtime.rs  scheduler.rs  spawner.rs  system.rs  timer.rs
src/fiber/inner/: error.rs  fiber.rs  harness.rs  join.rs  list.rs  mod.rs  queue.rs  raw.rs  stack.rs  state.rs  waker.rs  yield_now.rs
src/framed/: connect.rs  dispatcher.rs  error.rs  framed.rs  mod.rs  service.rs
src/http/: body.rs  builder.rs  cloneable.rs  config.rs  error.rs  helpers.rs  httpcodes.rs  httpmessage.rs  message.rs  mod.rs  payload.rs  request.rs  response.rs  service.rs  test.rs
src/http/client/: connection.rs  connector.rs  error.rs  h1proto.rs  h2proto.rs  pool.rs
src/http/encoding/: decoder.rs  encoder.rs
src/http/h1/: client.rs  codec.rs  decoder.rs  dispatcher.rs  encoder.rs  expect.rs  mod.rs  payload.rs  service.rs  upgrade.rs  utils.rs
src/http/h2/: client.rs  dispatcher.rs  error.rs  mod.rs  server.rs  service.rs  share.rs
src/http/header/: mod.rs
src/http/ws/: dispatcher.rs  frame.rs  mod.rs
src/jrpc/: client.rs  mod.rs  raw.rs  server.rs  server_utils.rs  transport.rs
src/jrpc/common/: params.rs
src/jrpc/raw/: client.rs  server.rs
src/jrpc/transport/: client.rs  local.rs
src/kcore/: accept.rs  builder.rs  config.rs  mod.rs  server.rs  service.rs  signal.rs  socket.rs  worker.rs
src/krse/: cell.rs  mod.rs
src/krse/fs/: create_dir.rs  create_dir_all.rs  file.rs  hard_link.rs  metadata.rs  mod.rs  open_options.rs  read.rs  read_dir.rs  read_link.rs  read_to_string.rs  remove_dir.rs  remove_dir_all.rs  remove_file.rs  (+4 more)
src/router/: de.rs  mod.rs  path.rs  resource.rs  router.rs  url.rs
src/secure/: mod.rs  rustls.rs  tls.rs
src/server/: accept.rs  builder.rs  config.rs  mod.rs  server.rs  service.rs  signal.rs  worker.rs
src/service/: and_then.rs  and_then_apply_fn.rs  apply.rs  apply_cfg.rs  boxed.rs  cell.rs  fn_service.rs  map.rs  map_config.rs  map_err.rs  map_init_err.rs  mod.rs  pipeline.rs  then.rs  transform.rs  transform_err.rs
src/timer/: clock.rs  delay_queue.rs  instant.rs  interval.rs  mod.rs
src/util/: bytestring.rs  condition.rs  counter.rs  either.rs  framed.rs  inflight.rs  keepalive.rs  linked_list.rs  mod.rs  mpsc.rs  oneshot.rs  order.rs  stream.rs  threadpool.rs  time.rs  timeout.rs
src/web/: app.rs  app_service.rs  config.rs  data.rs  error.rs  extract.rs  guard.rs  handler.rs  info.rs  mod.rs  request.rs  resource.rs  responder.rs  rmap.rs  route.rs  scope.rs  server.rs  service.rs  test.rs  web.rs
src/websocket/: codec.rs  dispatcher.rs  frame.rs
src/webui/: mod.rs
tests/: mod.rs
tests/http/: body.rs  config.rs  mod.rs
tests/service/: and_then.rs  and_then_apply_fn.rs  apply.rs  fn_service.rs  map.rs  map_err.rs  mod.rs  then.rs
tests/util/: inflight.rs  mod.rs  order.rs  time.rs  timeout.rs
tests/web/: app.rs  app_service.rs  config.rs  data.rs  extract.rs  file.rs  mod.rs  multipart.rs  request.rs  resource.rs  responder.rs  route.rs  scope.rs  service.rs  test.rs
web-macro/: Cargo.toml
web-macro/src/: lib.rs
web-macro/src/parser/: mod.rs
web-macro/src/validation/: self_closing.rs  svg_namespace.rs
web-macro/tests/: lib.rs
web-macro/tests/html/: all_tests.rs  text.rs
website/: README.md  _layout.html  community.html  funding.html  index.html
website/blog/: _side.html
website/doc/: _side.html
(+295 files in other folders)
