[package]
name = "kayrx"
version = "0.9.2"
authors = ["Nikolay Kim <fafhrd91@gmail.com>",  "Tokio Contributors <team@tokio.rs>", "krircc <krircc@qq.com>"]
documentation = "https://docs.rs/kayrx/"
repository = "https://github.com/kayrx/kayrx"
description = "The Kayrx Framework"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["async", "non-blocking", "futures", "http", "web"]
license = "MIT"
readme = "README.md"
edition = "2018"

[workspace]
members = [
  ".",
  "kayrx-macro",
  "kayrx-test",
]

[package.metadata.docs.rs]
all-features = true
[package.metadata.playground]
all-features = true

[features]
default = []

cookie = ["coo-kie", "coo-kie/percent-encode"]

[dependencies]
kayrx-macro = "0.3.0"
futures-core = "0.3.1"
futures-channel = "0.3"
futures-sink = "0.3.1"
futures-util = "0.3"
libc = "0.2.66"
arc-swap = "~0.4"
lazy_static = "1.4.0"
num_cpus = "1.11.1" 
bitflags = "1.2.1"
bytes = "0.5.3"
slab = "0.4"
fxhash = "0.2.1"
fnv = "1.0"
log = "0.4"
regex = "1.3"
indexmap = "1.3"
rand = "0.7"
parking_lot = "0.10"
memchr = "2.2.1"
iovec = "0.1.4"
pin-project = "0.4.6"
pin-project-lite = "0.1"
http = "0.2.0"
httparse = "1.3"
url = "2.1"
encoding_rs = "0.8"
mime = "0.3"
mime_guess = "2.0.1"
net2 = "0.2.33"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6.1"
base64 = "0.11"
derive_more = "0.99.2"
either = "1.5.3"
language-tags = "0.2"
percent-encoding = "2.1"
sha1 = "0.6"
trust-dns-proto = "=0.18.0-alpha.2"
trust-dns-resolver = "=0.18.0-alpha.2"
time = { version = "0.2.7", default-features = false, features = ["std"] }
twoway = "0.2"
v_htmlescape = "0.4"
brotli2 = { version="0.3.2" }                               # compression
flate2 = { version = "1.0.13" }                             # compression

rust-tls = { version = "0.16.0", package = "rustls" }
webpki = { version = "0.21" }
webpki-roots = { version = "0.17" }

coo-kie = { version = "0.13.3", package = "cookie", optional = true }

[dev-dependencies]
bytes = "0.5.3"
futures = "0.3"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
derive_more = "0.99"


[profile.release]
lto = true
opt-level = 3
codegen-units = 1