[package]
name = "kayrx-macro"
version = "0.3.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>", "krircc <krircc@qq.com>"]
documentation = "https://docs.rs/kayrx-macro/"
repository = "https://github.com/kayrx/kayrx"
description = "The Kayrx Framework"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "non-blocking", "futures"]
license = "MIT"
readme = "README.md"
edition = "2018"


[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full", "parsing"] }
proc-macro2 = "1"


