[package]
name = "kayrx-test"
version = "0.2.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>", "krircc <krircc@qq.com>"]
description = "kayrx test library"
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://kayrx.xyz"
documentation = "https://docs.rs/kayrx-test/"
repository = "https://github.com/kayrx/kayrx"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::websocket"]
license = "MIT"
edition = "2018"

[dependencies]
kayrx-macro = "0.3.0"
kayrx = "0.7"
futures = "0.3.1"
base64 = "0.11"
bytes = "0.5.3"
http = "0.2.0"
log = "0.4"
env_logger = "0.6"
net2 = "0.2"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.6"
slab = "0.4"
serde_urlencoded = "0.6.1"
time = "0.1"
open-ssl = { version="0.10", package="openssl", optional = true }

[dev-dependencies]
kayrx = "0.7"