[package]
name = "web-macro"
version = "0.1.0"
description = "web macro"
repository = "https://github.com/kayrx/kayrx"
documentation = "docs.rs/web-macro/"
authors = ["Nwafili <frankie.nwafili@gmail.com>", "krircc <krircc@qq.com>"]
keywords = ["virtual", "dom", "wasm", "webassembly"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4", features = ["span-locations"] }
quote = "0.6.11"
syn = { version = "0.15", features = ["full", "extra-traits"] }
lazy_static = "1.0"

[dev-dependencies]
kayrx = "0.9"
trybuild = "1.0"
